; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_find_oid_in_list.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/cryptui/extr_main.c_find_oid_in_list.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }
%struct.TYPE_4__ = type { i64, i32 }

@CRYPT_OID_INFO_OID_KEY = common dso_local global i32 0, align 4
@CRYPT_ENHKEY_USAGE_OID_GROUP_ID = common dso_local global i32 0, align 4
@LVFI_PARAM = common dso_local global i32 0, align 4
@LVM_FINDITEMW = common dso_local global i32 0, align 4
@LVFI_STRING = common dso_local global i32 0, align 4
@LVM_FINDITEMA = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64)* @find_oid_in_list to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @find_oid_in_list(i32 %0, i64 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.TYPE_3__, align 8
  %8 = alloca %struct.TYPE_4__, align 8
  store i32 %0, i32* %3, align 4
  store i64 %1, i64* %4, align 8
  %9 = load i32, i32* @CRYPT_OID_INFO_OID_KEY, align 4
  %10 = load i64, i64* %4, align 8
  %11 = inttoptr i64 %10 to i8*
  %12 = load i32, i32* @CRYPT_ENHKEY_USAGE_OID_GROUP_ID, align 4
  %13 = call i64 @CryptFindOIDInfo(i32 %9, i8* %11, i32 %12)
  store i64 %13, i64* %5, align 8
  %14 = load i64, i64* %5, align 8
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %25

16:                                               ; preds = %2
  %17 = load i32, i32* @LVFI_PARAM, align 4
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  store i32 %17, i32* %18, align 8
  %19 = load i64, i64* %5, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  store i64 %19, i64* %20, align 8
  %21 = load i32, i32* %3, align 4
  %22 = load i32, i32* @LVM_FINDITEMW, align 4
  %23 = ptrtoint %struct.TYPE_3__* %7 to i64
  %24 = call i32 @SendMessageW(i32 %21, i32 %22, i32 -1, i64 %23)
  store i32 %24, i32* %6, align 4
  br label %34

25:                                               ; preds = %2
  %26 = load i32, i32* @LVFI_STRING, align 4
  %27 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 1
  store i32 %26, i32* %27, align 8
  %28 = load i64, i64* %4, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  store i64 %28, i64* %29, align 8
  %30 = load i32, i32* %3, align 4
  %31 = load i32, i32* @LVM_FINDITEMA, align 4
  %32 = ptrtoint %struct.TYPE_4__* %8 to i64
  %33 = call i32 @SendMessageW(i32 %30, i32 %31, i32 -1, i64 %32)
  store i32 %33, i32* %6, align 4
  br label %34

34:                                               ; preds = %25, %16
  %35 = load i32, i32* %6, align 4
  ret i32 %35
}

declare dso_local i64 @CryptFindOIDInfo(i32, i8*, i32) #1

declare dso_local i32 @SendMessageW(i32, i32, i32, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
